--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Orchestra</title>
-    </head>
-    <body>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+<html lang="en">
 
-        <div class="wrapper">
-            <section class="intro-section">
-                <h1>Orchestra</h1>
-            </section>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Corpus</title>
+    <link rel="stylesheet" href="..\scss\styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+</head>
+
+<body class="main-content">
+    <header class="section sec1 header active">
+    </header>
+    <main>
+        <section class="section sec2 about"></section>
+        <section class="section sec3 about"></section>
+        <section class="section sec4 about"></section>
+        <section class="section sec5 about"></section>
+    </main>
+    <div class="controls">
+        <div class="control control-1 active-btn">
+            <i class="fa-solid fa-circle"></i>
         </div>
+        <div class="control control-2">
+            <i class="fa-solid fa-circle-notch"></i>
+        </div>
+        <div class="control control-3">
+            <i class="fa-solid fa-circle-notch"></i>
+        </div>
+        <div class="control control-4">
+            <i class="fa-solid fa-circle-notch"></i>
+        </div>
+        <div class="control control-5">
+            <i class="fa-solid fa-circle-notch"></i>
+        </div>
+    </div>
 
-    </body>
+    <script src="..\js\main.js"></script>
+</body>
 </html>
