--- a/html/home.html
+++ b/html/home.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>CodePen - Codepen Challenge: New Colors &amp; Subgrid</title>
+	<title>СОЛНЦЕ</title>
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Rowdies:wght@700&amp;display=swap'>
 	<link rel="stylesheet" href="../style/home_style.css">
 
@@ -13,79 +13,60 @@
 	<!-- partial:index.partial.html -->
 	<header>
 		<p class="navbar">
-			<a class="navbar-current" href="#">СОЛНЦЕ</a>
+			<a class="navbar-current">СОЛНЦЕ</a>
+			<a href="sine.html">СЕНЬ</a>
+			<a href="player.html">СОМНЕНИЕ</a>
 			<a href="#">СТАЛЬ</a>
-			<a href="#">СОМНЕНИЕ</a>
-			<a href="#">СЕНЬ</a>
 		</p>
 	</header>
 	<div class="container">
 		<section class="about">
-			<!-- <p class="tagline"><span style="background-color: grey; color: white">СОЛНЦЕ</span>
-						<a href="#">СТАЛЬ</a> <a href="#">СОМНЕНИЕ</a> <a href="#">СЕНЬ</a>
-					</p> -->
-			<h1>We use our robots unique</h1>
-			<h1>coffee making skill set</h1>
+			<h1>СИНТЕЗ //</h1>
+			<h1>/ СЭМПЛИРОВАНИЕ</h1>
+			<h1>sound sewing skill set</h1>
+
 			<div class="photo">
 				<h1>*СОЛНЦЕ</h1>
 			</div>
 			<div class="title">
-				<p>About</p>
+				<a href="https://github.com/KH-A561"  class="blink_me">github</a>
 				<div></div>
 			</div>
-			<p style="padding-top: 1cm; padding-left: 25px; font-style: italic;">For this reaСОЛНЦЕ we digitized the processes of professional and traditional
-				European coffee
-				making</p>
-			<p style="color: #E65C4E">
-				ЗВУК ЭТО ЯЗЫК АНГЕЛОВ
 			</p>
+			<p style="color: #E65C4E">
+				ЗВУК ЭТО ОПЕРЕНЬЕ АНГЕЛОВ
+			</p>
+
 		</section>
 		<section class="franchise">
-			<p class="tagline" style="padding-left: 25px;">СОЛНЦЕ integrated social components</p>
-			<h1>We propose a uniquely composed business module</h1>
+			<p class="tagline" style="padding-left: 25px;">/</p>
+			<h1>We confess these possible structural properties as the most valuable ones that can be aqcuired through observation of human thought process</h1>
 			<div class="title">
-				<p>Franchise</p>
+				<p>Philosophy</p>
 				<div></div>
 			</div>
 			<ul class="f-grid">
 				<li class="white">
-					<p>it works</p>
-					<h2>24/7</h2>
+					<p>Образы, как и звуки</p>
+					<h2>Collage</h2>
 				</li>
 				<li class="red">
-					<p>is never</p>
-					<h2>Late</h2>
+					<p>имеют свойство рваться, перемешиваться</p>
+					<h2>Chopped</h2>
 				</li>
 				<li class="black">
-					<p>does not require</p>
-					<h2>Wages<br>Taxes</h2>
+					<p>деформироваться, меняя содержание</p>
+					<h2>Distorted</h2>
 				</li>
 				<li class="white">
-					<p>I am getting</p>
-					<h2>Sick</h2>
+					<p>склеиваясь в новую, неисследованную</p>
+					<h2>Screwed</h2>
 				</li>
 				<li>
-					<p>has no</p>
-					<h2>Language Barriers</h2>
+					<p>реальность</p>
+					<h2>Torn</h2>
 				</li>
 				<li></li>
-			</ul>
-			<ul class="p-grid">
-				<li>
-					<h4>This is not only numbers and calculations</h4>
-					<p>We believe that coffee can compose secret energy for different things including business.
-					</p>
-				</li>
-				<li>
-					<h4>Our robot machine will be the best choice</h4>
-					<p>For retail outlets and small cafes, as they, in most cases, cannot afford professional
-						baristas.
-					</p>
-				</li>
-				<li>
-					<h4>Our solution is the dream</h4>
-					<p>As it may prove difficult to find quality staff at small coffee points.</p>
-				</li>
 			</ul>
 		</section>
 	</div>
